feat(cmd): restructure command packages and implement modular CLI structure
- Refactored CLI commands into separate modular packages (apply, delete, get, run, version)
- Introduced command grouping with annotations for better help organization
- Moved global flags to centralized management with GlobalFlags struct
- Updated Makefile wire command to use wildcard pattern
- Modified config structure to support clusters and updated environment enum
- Adjusted main.go to initialize and execute modular commands
- Enhanced version command with template-based output formatting
- Refined run command with flag handling and bootstrap configuration application

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -1,13 +1,23 @@
-environment: DEV
-server:
-  name: rabbit
-  metadata:
-    version: 1.0.0
-  http:
-    address: 0.0.0.0:8080
-    network: tcp
-    timeout: 10s
-  grpc:
-    address: 0.0.0.0:9090
-    network: tcp
-    timeout: 10s
+# environment: DEV
+# server:
+#   name: rabbit
+#   metadata:
+#     version: 1.0.0
+#   http:
+#     address: 0.0.0.0:8080
+#     network: tcp
+#     timeout: 10s
+#   grpc:
+#     address: 0.0.0.0:9090
+#     network: tcp
+#     timeout: 10s
+
+# clusters:
+#   - name: rabbit01
+#     address: 127.0.0.1:8080
+#     protocol: HTTP
+#     timeout: 10s
+#   - name: rabbit02
+#     address: 127.0.0.1:9090
+#     protocol: GRPC
+#     timeout: 10s
