--- a/config/server.yaml
+++ b/config/server.yaml
@@ -12,12 +12,12 @@
 #     network: tcp
 #     timeout: 10s
 
-# clusters:
-#   - name: rabbit01
-#     address: 127.0.0.1:8080
-#     protocol: HTTP
-#     timeout: 10s
-#   - name: rabbit02
-#     address: 127.0.0.1:9090
-#     protocol: GRPC
-#     timeout: 10s
+clusters:
+  - name: rabbit01
+    endpoint: 127.0.0.1:8080
+    protocol: HTTP
+    timeout: 10s
+  - name: rabbit02
+    endpoint: 127.0.0.1:9090
+    protocol: GRPC
+    timeout: 10s
