feat(email): implement email sending with cluster support and JWT authentication
- Add new config package to manage client configurations
- Update email command to use new config structure and expand home directory
- Implement JWT-based authentication for gRPC and HTTP clients
- Add middleware for JWT parsing and namespace binding
- Integrate email service with business logic layer
- Update proto definitions for configuration and namespace management
- Configure Makefile to generate both conf and config files
- Add server metadata with repository information
- Wire up biz layer dependencies in wire.go
- Enhance swagger documentation with namespace APIs

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -1,16 +1,16 @@
-# environment: DEV
-# server:
-#   name: rabbit
-#   metadata:
-#     version: 1.0.0
-#   http:
-#     address: 0.0.0.0:8080
-#     network: tcp
-#     timeout: 10s
-#   grpc:
-#     address: 0.0.0.0:9090
-#     network: tcp
-#     timeout: 10s
+environment: DEV
+server:
+  name: moon.rabbit
+  metadata:
+    tag: rabbit
+  http:
+    address: 0.0.0.0:8080
+    network: tcp
+    timeout: 10s
+  grpc:
+    address: 0.0.0.0:9090
+    network: tcp
+    timeout: 10s
 
 clusters:
   - name: rabbit01
@@ -21,3 +21,10 @@ clusters:
     endpoint: 127.0.0.1:9090
     protocol: GRPC
     timeout: 10s
+
+jwt:
+  secret: xxx
+  expire: 10m
+  issuer: rabbit
+  allowList:
+    - /rabbit.api.v1.Health/HealthCheck
