feat(config): add etcd configuration and docker-compose for deployment
- Add etcd configuration section in server.yaml
- Include docker-compose.yml for etcd deployment under deploy/etcd
- Update .gitignore to exclude deploy data directories

feat(cmd): update global flags and config loading logic

- Rename rabbitConfigPath to RabbitConfigPath in GlobalFlags struct
- Set default values for global flags including Author, Github, and Hostname
- Remove redundant configPath field from email send command flags
- Use RabbitConfigPath for loading client configuration

feat(cmd/run): integrate etcd registry and update app metadata

- Add etcd client initialization with configurable endpoints and credentials
- Register services with etcd using kratos.Registrar
- Replace static hostname ID with timestamp-based unique ID
- Ensure HTTP and gRPC configurations are initialized if nil

feat(connect): reorder imports and maintain functionality

- Reorder imports in grpc.go for better readability
- Keep merr import local to avoid unnecessary exposure

refactor(cmd/send/email): update sender initialization with discovery

- Modify NewSender function to accept registry discovery instance
- Load etcd client for service discovery when sending emails
- Apply namespace from flags to request parameters

chore(deps): add etcd and kratos etcd registry dependencies

- Add go.mod requirements for etcd client and kratos etcd registry
- Update go.sum with new dependency checksums

chore(proto): extend bootstrap configuration with etcd support

- Add etcd field to Bootstrap message in conf.proto

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -3,24 +3,24 @@ server:
   name: moon.rabbit
   metadata:
     tag: rabbit
-  http:
-    address: 0.0.0.0:8080
-    network: tcp
-    timeout: 10s
-  grpc:
-    address: 0.0.0.0:9090
-    network: tcp
-    timeout: 10s
+  # http:
+  #   address: 0.0.0.0:8080
+  #   network: tcp
+  #   timeout: 10s
+  # grpc:
+  #   address: 0.0.0.0:9090
+  #   network: tcp
+  #   timeout: 10s
 
-clusters:
-  - name: rabbit01
-    endpoint: 127.0.0.1:8080
-    protocol: HTTP
-    timeout: 10s
-  - name: rabbit02
-    endpoint: 127.0.0.1:9090
-    protocol: GRPC
-    timeout: 10s
+# clusters:
+#   - name: rabbit01
+#     endpoint: 127.0.0.1:8080
+#     protocol: HTTP
+#     timeout: 10s
+#   - name: rabbit02
+#     endpoint: 127.0.0.1:9090
+#     protocol: GRPC
+#     timeout: 10s
 
 jwt:
   secret: xxx
@@ -28,3 +28,9 @@ jwt:
   issuer: rabbit
   allowList:
     - /rabbit.api.v1.Health/HealthCheck
+
+etcd:
+  endpoints:
+    - http://127.0.0.1:2379
+  username:
+  password:
