--- a/config/server.yaml
+++ b/config/server.yaml
@@ -34,3 +34,13 @@ etcd:
     - http://127.0.0.1:2379
   username:
   password:
+
+mysql:
+  username: root
+  password: "123456"
+  host: localhost
+  port: 3306
+  database: rabbit
+  charset: utf8mb4
+  parseTime: true
+  loc: Asia/Shanghai
