--- a/config/server.yaml
+++ b/config/server.yaml
@@ -35,9 +35,9 @@ etcd:
   username:
   password:
 
-mysql:
+main:
   username: root
-  password: "123456"
+  password: '123456'
   host: localhost
   port: 3306
   database: rabbit
