feat(message): add SMS message type and message log APIs
- Add `MessageTypeSMS` to support SMS notifications
- Introduce `MessageLog` service with CRUD operations for message logs
- Define new protobuf messages and services for message log management
- Update OpenAPI spec with message log endpoints and schemas
- Modify server config to disable etcd by default and add debug options
- Refactor etcd client initialization to be conditional
- Add kratos CLI tool to Makefile for development setup

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -29,11 +29,11 @@ jwt:
   allowList:
     - /rabbit.api.v1.Health/HealthCheck
 
-etcd:
-  endpoints:
-    - http://127.0.0.1:2379
-  username:
-  password:
+# etcd:
+#   endpoints:
+#     - http://127.0.0.1:2379
+#   username:
+#   password:
 
 main:
   username: root
@@ -44,3 +44,5 @@ main:
   charset: utf8mb4
   parseTime: true
   loc: Asia/Shanghai
+  debug: true
+  useSystemLogger: false
