feat(message-log): implement message log functionality and enhance related structures
- Introduce `MessageLog` service with CRUD operations for managing message logs
- Add new `MessageLogItemBo` and `ListMessageLogBo` for business logic
- Update repository interface to include methods for retrieving and updating message logs
- Modify protobuf definitions to support new message log requests and responses
- Enhance OpenAPI specifications with message log endpoints and schemas
- Register `MessageLogService` in the server for gRPC and HTTP handling
- Update Makefile to include new build targets for message log management

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -28,7 +28,12 @@ jwt:
   issuer: rabbit
   allowList:
     - /rabbit.api.v1.Health/HealthCheck
-
+namespaceAllowList:
+  - /rabbit.api.v1.Namespace/SaveNamespace
+  - /rabbit.api.v1.Namespace/UpdateNamespaceStatus
+  - /rabbit.api.v1.Namespace/DeleteNamespace
+  - /rabbit.api.v1.Namespace/GetNamespace
+  - /rabbit.api.v1.Namespace/ListNamespace
 # etcd:
 #   endpoints:
 #     - http://127.0.0.1:2379
