--- a/config/server.yaml
+++ b/config/server.yaml
@@ -29,7 +29,8 @@ jwt:
   allowList:
     - /rabbit.api.v1.Health/HealthCheck
 namespaceAllowList:
-  - /rabbit.api.v1.Namespace/SaveNamespace
+  - /rabbit.api.v1.Namespace/CreateNamespace
+  - /rabbit.api.v1.Namespace/UpdateNamespace
   - /rabbit.api.v1.Namespace/UpdateNamespaceStatus
   - /rabbit.api.v1.Namespace/DeleteNamespace
   - /rabbit.api.v1.Namespace/GetNamespace
