feat(kubernetes): integrate Kubernetes registry support and enhance data handling
- Add Kubernetes registry configuration to Bootstrap and server.yaml
- Implement Kubernetes client initialization in the data layer
- Refactor application setup to utilize Kubernetes registry for service registration
- Update message bus to support dynamic sender creation based on cluster configurations
- Enhance error handling and logging for registry initialization and message sending
- Introduce new Sender interface for abstracting message sending logic across protocols

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -35,11 +35,16 @@ namespaceAllowList:
   - /rabbit.api.v1.Namespace/DeleteNamespace
   - /rabbit.api.v1.Namespace/GetNamespace
   - /rabbit.api.v1.Namespace/ListNamespace
+
 # etcd:
 #   endpoints:
 #     - http://127.0.0.1:2379
 #   username:
 #   password:
+
+# kubernetes:
+#   kubeConfig: ~/.kube/config
+#   namespace: moon
 
 main:
   username: root
