--- a/config/server.yaml
+++ b/config/server.yaml
@@ -38,6 +38,26 @@ main:
   debug: true
   useSystemLogger: false
 
+# biz:
+#   <namespace>,<namespace2>:
+#     username: root
+#     password: '123456'
+#     host: localhost
+#     port: 3306
+#     database: rabbit
+#     charset: utf8mb4
+#     parseTime: true
+#     loc: Asia/Shanghai
+#   <namespace3>,<namespace4>:
+#     username: root
+#     password: '123456'
+#     host: localhost
+#     port: 3306
+#     database: rabbit
+#     charset: utf8mb4
+#     parseTime: true
+#     loc: Asia/Shanghai
+
 eventBus:
   workerCount: 1
   timeout: 10s
