--- a/config/server.yaml
+++ b/config/server.yaml
@@ -66,23 +66,23 @@ eventBus:
   workerCount: 1
   timeout: 10s
 
-# registryType: ETCD
+registryType: ETCD
 
-# clusters:
-#   - name: rabbit01
-#     endpoint: 127.0.0.1:8080
-#     protocol: HTTP
-#     timeout: 10s
-#   - name: rabbit02
-#     endpoint: 127.0.0.1:9090
-#     protocol: GRPC
-#     timeout: 10s
+clusters:
+  - name: rabbit01
+    endpoint: discovery:///moon.rabbit
+    protocol: GRPC
+    timeout: 10s
+  # - name: rabbit02
+  #   endpoint: 127.0.0.1:9090
+  #   protocol: GRPC
+  #   timeout: 10s
 
-# etcd:
-#   endpoints:
-#     - http://127.0.0.1:2379
-#   username:
-#   password:
+etcd:
+  endpoints:
+    - http://127.0.0.1:2379
+  username:
+  password:
 
 # kubernetes:
 #   kubeConfig: ~/.kube/config
