build(workflow): simplify ci workflow by using make all command
- Replace multiple make commands with a single `make all` step in the GitHub Actions workflow
- Remove redundant steps: `make api`, `make conf`, `make wire`, and `make clean`

feat(deps): update magicbox dependency from v0.0.1 to v0.0.2

- Update go.mod to use latest version of github.com/aide-family/magicbox
- Remove replace directive for local development
- Update go.sum with new dependency checksums

refactor(connect): reorganize imports in kubernetes.go

- Reorder import statements for better readability
- Move magicbox/load import below k8s.io imports

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,21 +28,12 @@ jobs:
       - name: Install dependencies
         run: make init
 
-      - name: make api
-        run: make api
-
-      - name:  make conf
-        run: make conf
-
-      - name: make wire
-        run: make wire
+      - name: make all
+        run: make all
 
       - name: make build
         run: make build
 
       - name: make test
         run: make test
-
-      - name: make clean
-        run: make clean
 
