feat(config): refactor environment and boolean enums to external proto definitions
- Move `Environment` and `Boolean` enums to `proto/rabbit/enum/enum.proto`
- Update references in `internal/conf/conf.proto` and `proto/rabbit/config/config.proto`
- Adjust logic in flag parsing and config loading to use new enum methods
- Add helper methods for `Boolean` and `Environment` types in `pkg/enum`

feat(k8s): add kubernetes deployment manifests for rabbit service

- Introduce `deploy/server/k8s/rabbit.yaml` with full k8s resources
- Include Namespace, ConfigMap, Deployment, Service, Ingress, Secret, ServiceAccount
- Define RBAC roles and bindings for registry access
- Configure environment variables and secrets for secure deployment

refactor(proto-gen): clean up only generated `.pb.go` files instead of entire directories

- Modify Makefile to remove only `*.pb.go` files during proto generation steps
- Preserve directories while regenerating protobuf files
- Ensure cleaner build process without unnecessary file removals

fix(cluster-config): support multiple cluster endpoints via comma-separated values

- Split cluster endpoints by commas when initializing clients
- Update message bus and email sender to handle multiple endpoints
- Use `strings.Split()` for etcd and cluster configurations

refactor(connect): introduce `InitConfig` interface and default implementation

- Create `DefaultConfig` struct implementing `InitConfig`
- Replace direct usage of `ClusterConfig` with `InitConfig` in connectors
- Improve testability and flexibility of client initialization

style(logging): remove debug print statements from middleware

- Remove unused `fmt.Println` calls in namespace middleware
- Clean up logging output for production readiness

docs(env): expand .env.example with comprehensive configuration options

- Add detailed environment variable definitions grouped by component
- Include sections for HTTP, gRPC, JWT, Database, EventBus, Registry, Cluster, Etcd, Kubernetes
- Set s

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,53 @@
-MOON_RABBIT_HTTP_ADDRESS=0.0.0.0:8888
+# Environment
+MOON_RABBIT_ENVIRONMENT=PROD
+
+# Server
+MOON_RABBIT_NAME=moon.rabbit
+MOON_RABBIT_USE_RANDOM_ID=false
+MOON_RABBIT_TAG=rabbit
+
+# HTTP Server
+MOON_RABBIT_HTTP_ADDRESS=0.0.0.0:8080
+MOON_RABBIT_HTTP_NETWORK=tcp
 MOON_RABBIT_HTTP_TIMEOUT=10s
-MOON_RABBIT_GRPC_ADDRESS=0.0.0.0:9999
+
+# gRPC Server
+MOON_RABBIT_GRPC_ADDRESS=0.0.0.0:9090
+MOON_RABBIT_GRPC_NETWORK=tcp
 MOON_RABBIT_GRPC_TIMEOUT=10s
+
+# JWT
 MOON_RABBIT_JWT_SECRET=xxx
 MOON_RABBIT_JWT_EXPIRE=600s
+MOON_RABBIT_JWT_ISSUER=rabbit
 
-MOON_RABBIT_MAIN_USERNAME=
-MOON_RABBIT_MAIN_PASSWORD=
-MOON_RABBIT_MAIN_HOST=
-MOON_RABBIT_MAIN_PORT=
+# Main Database
+MOON_RABBIT_MAIN_USERNAME=root
+MOON_RABBIT_MAIN_PASSWORD=123456
+MOON_RABBIT_MAIN_HOST=localhost
+MOON_RABBIT_MAIN_PORT=3306
 MOON_RABBIT_MAIN_DATABASE=rabbit
+MOON_RABBIT_MAIN_DEBUG=true
+MOON_RABBIT_MAIN_USE_SYSTEM_LOGGER=false
+
+# Event Bus
+MOON_RABBIT_EVENT_BUS_WORKER_COUNT=10
+MOON_RABBIT_EVENT_BUS_TIMEOUT=10s
+
+# Registry
+MOON_RABBIT_REGISTRY_TYPE=ETCD
+
+# Cluster
+MOON_RABBIT_CLUSTER_NAME=rabbit
+MOON_RABBIT_CLUSTER_ENDPOINTS=discovery:///moon.rabbit
+MOON_RABBIT_CLUSTER_PROTOCOL=GRPC
+MOON_RABBIT_CLUSTER_TIMEOUT=10s
+
+# etcd
+MOON_RABBIT_ETCD_ENDPOINTS=localhost:2379
+MOON_RABBIT_ETCD_USERNAME=
+MOON_RABBIT_ETCD_PASSWORD=
+
+# Kubernetes
+MOON_RABBIT_KUBERNETES_KUBECONFIG=~/.kube/config
+MOON_RABBIT_KUBERNETES_NAMESPACE=moon
