feat(client): generate client config file with cluster and JWT token settings
- Add `generateClientConfig` function to create and write client configuration
- Support for ETCD and Kubernetes registry types in client config
- Generate root JWT token with 1-year expiration for client authentication
- Add command-line flag `-o` to specify client config output path
- Enable client config generation via `enableClientConfig` in Bootstrap config
- Register custom YAML codec for proto messages using protoyaml
- Update ClusterConfig.Protocol enum values to start from UNKNOWN=0
- Set default cluster endpoint to localhost:9090 when no registry is used
- Create `.rabbit/config.yaml` in home directory by default

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -1,4 +1,5 @@
 environment: ${MOON_RABBIT_ENVIRONMENT:PROD}
+enableClientConfig: true
 server:
   name: ${MOON_RABBIT_NAME:moon.rabbit}
   useRandomID: false
@@ -39,7 +40,7 @@ registryType: ${MOON_RABBIT_REGISTRY_TYPE:}
 
 cluster:
   name: ${MOON_RABBIT_CLUSTER_NAME:rabbit}
-  endpoints: ${MOON_RABBIT_CLUSTER_ENDPOINTS:discovery:///moon.rabbit,}
+  endpoints: ${MOON_RABBIT_CLUSTER_ENDPOINTS:localhost:9090}
   protocol: ${MOON_RABBIT_CLUSTER_PROTOCOL:GRPC}
   timeout: ${MOON_RABBIT_CLUSTER_TIMEOUT:10s}
 
