feat(config): refactor environment configuration and enable feature flags via env vars
- Migrate boolean config fields to string types for better env var support
- Add basic auth configuration for Swagger and Metrics endpoints
- Update proto definitions to support string-based feature toggles
- Remove embedded swagger files from http.go and move to server.go
- Implement basic auth middleware for securing documentation and metrics
- Adjust Dockerfile and Makefile to align with updated flag handling
- Enhance logging and debugging options through environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-# Environment
-MOON_RABBIT_ENVIRONMENT=PROD
+# Rabbit Service Configuration
+# Copy this file to .env and modify the values as needed
 
-# Server
+# =============================================================================
+# Environment
+# =============================================================================
+MOON_RABBIT_ENVIRONMENT=PROD
+MOON_RABBIT_ENABLE_CLIENT_CONFIG=true
+MOON_RABBIT_ENABLE_SWAGGER=true
+MOON_RABBIT_ENABLE_METRICS=true
+
+# =============================================================================
+# Server Configuration
+# =============================================================================
 MOON_RABBIT_NAME=moon.rabbit
+MOON_RABBIT_USE_RANDOM_ID=false
 MOON_RABBIT_METADATA_TAG=rabbit
 
 # HTTP Server
@@ -15,36 +26,66 @@ MOON_RABBIT_GRPC_ADDRESS=0.0.0.0:9090
 MOON_RABBIT_GRPC_NETWORK=tcp
 MOON_RABBIT_GRPC_TIMEOUT=10s
 
-# JWT
+# =============================================================================
+# JWT Configuration
+# =============================================================================
 MOON_RABBIT_JWT_SECRET=xxx
 MOON_RABBIT_JWT_EXPIRE=600s
 MOON_RABBIT_JWT_ISSUER=rabbit
 
-# Main Database
+# =============================================================================
+# Database Configuration (Main)
+# =============================================================================
 MOON_RABBIT_MAIN_USERNAME=root
 MOON_RABBIT_MAIN_PASSWORD=123456
 MOON_RABBIT_MAIN_HOST=localhost
 MOON_RABBIT_MAIN_PORT=3306
 MOON_RABBIT_MAIN_DATABASE=rabbit
+MOON_RABBIT_MAIN_DEBUG=false
+MOON_RABBIT_MAIN_USE_SYSTEM_LOGGER=true
 
-# Event Bus
-MOON_RABBIT_EVENT_BUS_WORKER_COUNT=10
+# =============================================================================
+# Event Bus Configuration
+# =============================================================================
+MOON_RABBIT_EVENT_BUS_WORKER_COUNT=1
 MOON_RABBIT_EVENT_BUS_TIMEOUT=10s
 
-# Registry
-MOON_RABBIT_REGISTRY_TYPE=ETCD
+# =============================================================================
+# Registry Configuration
+# =============================================================================
+MOON_RABBIT_REGISTRY_TYPE=
 
-# Cluster
+# =============================================================================
+# Cluster Configuration
+# =============================================================================
 MOON_RABBIT_CLUSTER_NAME=rabbit
-MOON_RABBIT_CLUSTER_ENDPOINTS=discovery:///moon.rabbit
+MOON_RABBIT_CLUSTER_ENDPOINTS=localhost:9090
 MOON_RABBIT_CLUSTER_PROTOCOL=GRPC
 MOON_RABBIT_CLUSTER_TIMEOUT=10s
 
-# etcd
-MOON_RABBIT_ETCD_ENDPOINTS=localhost:2379
+# =============================================================================
+# ETCD Configuration
+# =============================================================================
+MOON_RABBIT_ETCD_ENDPOINTS=127.0.0.1:2379
 MOON_RABBIT_ETCD_USERNAME=
 MOON_RABBIT_ETCD_PASSWORD=
 
-# Kubernetes
+# =============================================================================
+# Kubernetes Configuration
+# =============================================================================
 MOON_RABBIT_KUBERNETES_KUBECONFIG=~/.kube/config
 MOON_RABBIT_KUBERNETES_NAMESPACE=moon
+
+# =============================================================================
+# Swagger Basic Auth Configuration
+# =============================================================================
+MOON_RABBIT_SWAGGER_BASIC_AUTH_ENABLED=true
+MOON_RABBIT_SWAGGER_BASIC_AUTH_USERNAME=moon.rabbit
+MOON_RABBIT_SWAGGER_BASIC_AUTH_PASSWORD=rabbit.swagger
+
+# =============================================================================
+# Metrics Basic Auth Configuration
+# =============================================================================
+MOON_RABBIT_METRICS_BASIC_AUTH_ENABLED=true
+MOON_RABBIT_METRICS_BASIC_AUTH_USERNAME=moon.rabbit
+MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD=rabbit.metrics
