feat(config): add database support and config paths
- Add `MOON_RABBIT_USE_DATABASE` env variable to enable database usage
- Introduce `MOON_RABBIT_CONFIG_PATHS` for specifying configuration file paths
- Update `.env.example` and `server.yaml` with new configuration options
- Extend protobuf definitions with Config message and related structures
- Improve logging for Swagger and Metrics endpoints with auth status

Also update .gitignore to exclude datasource directory and description.txt

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ MOON_RABBIT_ENVIRONMENT=PROD
 MOON_RABBIT_ENABLE_CLIENT_CONFIG=true
 MOON_RABBIT_ENABLE_SWAGGER=true
 MOON_RABBIT_ENABLE_METRICS=true
+MOON_RABBIT_USE_DATABASE=true
 
 # =============================================================================
 # Server Configuration
@@ -89,3 +90,8 @@ MOON_RABBIT_SWAGGER_BASIC_AUTH_PASSWORD=rabbit.swagger
 MOON_RABBIT_METRICS_BASIC_AUTH_ENABLED=true
 MOON_RABBIT_METRICS_BASIC_AUTH_USERNAME=moon.rabbit
 MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD=rabbit.metrics
+
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+MOON_RABBIT_CONFIG_PATHS=./datasource
