--- a/datasource/namespace.yaml
+++ b/datasource/namespace.yaml
@@ -8,3 +8,21 @@ namespaces:
     metadata:
       key: value
     status: ENABLED
+  - id: 2
+    uid: 1986338680076115969
+    createdAt: 2021-01-01 00:00:00
+    updatedAt: 2021-01-01 00:00:00
+    creator: 1986338680076115969
+    name: default2
+    metadata:
+      key: value2
+    status: ENABLED
+  - id: 3
+    uid: 1986338680076115970
+    createdAt: 2021-01-01 00:00:00
+    updatedAt: 2021-01-01 00:00:00
+    creator: 1986338680076115970
+    name: default3
+    metadata:
+      key: value3
+    status: ENABLED
