feat(run): enhance command flags and config loading
- Refactor flag parsing to support default config bytes input
- Add comprehensive CLI flag bindings for server, JWT, database,
  registry, Kubernetes, and other configurations
- Improve configuration loading logic with better error handling
- Introduce bytes source for in-memory config loading
- Update Dockerfile CMD to include custom config and output paths
- Modify cluster endpoint validation in client config generation
- Remove unused GlobalEmail field from Bootstrap proto message
- Add helper methods for RegistryType enum checks
- Adjust default values in server.yaml for cluster settings

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -43,8 +43,8 @@ eventBus:
 registryType: ${MOON_RABBIT_REGISTRY_TYPE:}
 
 cluster:
-  name: ${MOON_RABBIT_CLUSTER_NAME:rabbit}
-  endpoints: ${MOON_RABBIT_CLUSTER_ENDPOINTS:localhost:9090}
+  name: ${MOON_RABBIT_CLUSTER_NAME:moon.rabbit}
+  endpoints: ${MOON_RABBIT_CLUSTER_ENDPOINTS:}
   protocol: ${MOON_RABBIT_CLUSTER_PROTOCOL:GRPC}
   timeout: ${MOON_RABBIT_CLUSTER_TIMEOUT:10s}
 
