feat(config): update rabbit config path and improve command descriptions
- Change default rabbit config path from `~/.rabbit` to `./.rabbit/`
- Update Dockerfile to use absolute paths for volume mounts and CMD arguments
- Enhance CLI command help texts with detailed descriptions and usage scenarios
- Refactor config loading logic in send commands to use kratos config sources
- Improve path normalization in client config generation
- Remove obsolete config fields and consolidate configuration handling
- Add metadata fields to server config including repository, author and email
- Update dependencies and clean up unused imports and code sections

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -9,6 +9,9 @@ server:
   useRandomID: ${MOON_RABBIT_USE_RANDOM_ID:false}
   metadata:
     tag: ${MOON_RABBIT_METADATA_TAG:rabbit}
+    repository: ${MOON_RABBIT_METADATA_REPOSITORY:https://github.com/aide-family/rabbit}
+    author: ${MOON_RABBIT_METADATA_AUTHOR:Aide Family}
+    email: ${MOON_RABBIT_METADATA_EMAIL:aidecloud@163.com}
   http:
     address: "${MOON_RABBIT_HTTP_ADDRESS:0.0.0.0:8080}"
     network: "${MOON_RABBIT_HTTP_NETWORK:tcp}"
