feat(docker): refactor Dockerfile and update configurations
- Remove non-root user creation and switch to ENTRYPOINT with CMD
- Update binary copy path and expose ports in single line
- Set executable permissions for rabbit binary
- Create /moon/datasource directory

feat(makefile): update stringer dependency version

- Replace github.com/moon-monitor/stringer with github.com/aide-family/stringer@v1.1.3

feat(cmd): modify config-paths flag to support string input

- Change --config-paths from StringSliceVar to StringVar
- Support comma-separated paths as input

refactor(cmd): simplify config loading logic

- Use conf.Load directly instead of separate Load and Scan steps
- Reduce code redundancy in configuration parsing

docs(deploy): add docker-compose usage guide and configuration files

- Add README-docker-compose.md with detailed instructions
- Include docker-compose.yml with environment variables and health check

docs(deploy): add Kubernetes deployment configurations

- Add namespace, configmap, secret example, serviceaccount, rbac, deployment,
  service, ingress, kustomization, and scripts for deploying to Kubernetes
- Include deploy.sh and undeploy.sh for easy management
- Add .gitignore for sensitive files

feat(go.mod): upgrade magicbox version and remove local replace

- Upgrade github.com/aide-family/magicbox from v0.0.3 to v0.0.4
- Remove replace directive pointing to local path

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -70,5 +70,4 @@ metricsBasicAuth:
   username: ${MOON_RABBIT_METRICS_BASIC_AUTH_USERNAME:moon.rabbit}
   password: ${MOON_RABBIT_METRICS_BASIC_AUTH_PASSWORD:rabbit.metrics}
 
-configPaths:
-  - ${MOON_RABBIT_CONFIG_PATHS:./datasource}
+configPaths: ${MOON_RABBIT_CONFIG_PATHS:./datasource}
