feat(core): enhance command-line interface and documentation
- Add detailed README files in both Chinese and English with comprehensive project documentation
- Improve CLI help texts and command grouping (Basic, Message, Service, Code, Database)
- Enhance `config`, `gorm gen`, and `gorm migrate` command descriptions
- Introduce long-form help messages for better user guidance
- Update Makefile to support cross-platform cleaning of generated files
- Add .DS_Store to .gitignore for macOS users

--- a/config/server.yaml
+++ b/config/server.yaml
@@ -40,9 +40,10 @@ main:
     loc: Asia/Shanghai
 
 eventBus:
-  workerCount: ${MOON_RABBIT_EVENT_BUS_WORKER_COUNT:1}
+  workerCount: ${MOON_RABBIT_EVENT_BUS_WORKER_COUNT:10}
   timeout: ${MOON_RABBIT_EVENT_BUS_TIMEOUT:10s}
-
+  bufferSize: ${MOON_RABBIT_EVENT_BUS_BUFFER_SIZE:1000}
+  
 registryType: ${MOON_RABBIT_REGISTRY_TYPE:}
 
 cluster:
